[package]
name = "lc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
libra = { git = "https://github.com/jaguerra767/libra.git", version = "0.1.0" }
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"

